--- a/itgm10/index.html
+++ b/itgm10/index.html
@@ -352,7 +352,7 @@ metrics:
 
 
 <!-- INFOPARTNERS -->
-<!--<section id="infopartners">
+<section id="infopartners">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -368,7 +368,7 @@ metrics:
             </div>
         </div>
     </div>
-</section>-->
+</section>
 
 
 
