fix community list and donate header and volonter's text and add feedback

--- a/itgm10/index.html
+++ b/itgm10/index.html
@@ -72,7 +72,7 @@ location:
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <a href="javascript:;">IT Global Meetup в цифрах <i class="fa fa-angle-right fa"></i></a>
+        <!-- <a href="javascript:;">IT Global Meetup в цифрах <i class="fa fa-angle-right fa"></i></a> -->
       </div>
     </div>
   </div>
@@ -181,14 +181,14 @@ location:
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
+          <h4>"Для меня IT GM - это движение, отвечающее тенденциям, потребностям времени, хорошая здоровая идея. И я рассматриваю свое участие и участие нашего сообщества как возможность создать диалог между IT people и IT HR, прозрачность, что HR может дать, и какие ожидания “заказчиков” от HR, избавиться от стереотипов, повысить взаимное уважение и интерес. В определенном смысле, мы формируем “культуру потребления HR” )) Судя по отзывам и интересу к нашему островку - у нас это получается ) и это меня очень радует! Обмен лучшими практиками, обсуждение актуальных HR вопросов, психологии управления людьми - это развивает и HR и гостей островка. Именно это и есть win-win!"<br><br><span style="font-style:normal;">Ирина Матвеева, Escalate. Представитель IT HR сообщества на ITGM. Партнер Премии IT HR Awards.</span></h4>
+        </div>
+        <!-- <div class="item">
           <h4>"Текст отзыва спикера"<br><span style="font-style:normal;">Имя Фамилия, Название Компании</span></h4>
         </div>
         <div class="item">
           <h4>"Текст отзыва спикера"<br><span style="font-style:normal;">Имя Фамилия, Название Компании</span></h4>
-        </div>
-        <div class="item">
-          <h4>"Текст отзыва спикера"<br><span style="font-style:normal;">Имя Фамилия, Название Компании</span></h4>
-        </div>
+        </div> -->
       </div>
 
       <!-- Left and right controls -->
@@ -416,7 +416,7 @@ location:
                   <div class="col-sm-8 col-sm-offset-2">
                     <p>Мы уходим от формата «один говорит - остальные слушают». Открытая площадка и общение с коллегами из других
                       компаний - это ценнейший ресурс и огромный стимул для роста активных IT-специалистов.</p>
-                    <small>Евгений Крапивко</small>
+                    <small>Анна Горбатенко</small>
                   </div>
                 </div>
               </blockquote>
@@ -427,7 +427,7 @@ location:
                 <div class="row">
                   <div class="col-sm-8 col-sm-offset-2">
                     <p>Делитесь знаниями, не жадничайте!</p>
-                    <small>Сергей Сёмка</small>
+                    <small>Михаил Полубояринов</small>
                   </div>
                 </div>
               </blockquote>
@@ -485,8 +485,24 @@ location:
 <!-- YANDEX -->
 <div id="yandex" class="container-fluid">
   <div class="container">
-    <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410011943203218&quickpay=shop&payment-type-choice=on&writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0+%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%BE%D0%B3%D0%BE+%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D1%8F&targets-hint=&default-sum=500&button-text=03&fio=on&successURL=http%3A%2F%2Fpiter-united.ru"
-      width="450" height="198"></iframe>
+    <div class="row">
+
+            <div class="col-lg-12">
+                <h3 class="text-center">Поддержка мероприятия</h3>
+                <p class="donate-form-main-text">Все собранные нами средства пойдут на покрытие организационных расходов мероприятия,<br>
+                                                 либо на закупку инвентаря необходимого сообществам (бумагу, флипчарты, ролл-апы и т.д.).<br>
+                                                 Мы будем вам очень признательны за поддержку мероприятия!</p>
+            </div>
+
+            <div class="donate-form">
+                <iframe frameborder="0" allowtransparency="true" scrolling="no"
+                        src="https://money.yandex.ru/embed/shop.xml?account=410011943203218&quickpay=shop&payment-type-choice=on&writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0+%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%BE%D0%B3%D0%BE+%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D1%8F&targets-hint=&default-sum=500&button-text=03&fio=on&successURL=http%3A%2F%2Fpiter-united.ru"
+                        width="450" height="198"></iframe>
+            </div>
+
+            <p class="donate-form-subfooter"><i>Вы можете поддержать нас финансово (любой суммой), а можете <a
+                    href="mailto:piterunited@gmail.com">стать волонтером</a></i>.</p>
+        </div>
   </div>
 </div>
 
