fix program, community list

--- a/itgm10/index.html
+++ b/itgm10/index.html
@@ -113,10 +113,10 @@ location:
         </div>
       </div>
       <div class="col-md-6 text-center col-img-photo">
-        <a class="play" href="javascript:;">
-          <i class="fa fa-camera fa-2x"></i>
+        <!--<a class="play" href="javascript:;">-->
+          <!--<i class="fa fa-camera fa-2x"></i>-->
           <!-- вызов модалки с фотогалереей -->
-        </a>
+        <!--</a>-->
       </div>
     </div>
   </div>
@@ -224,7 +224,7 @@ location:
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <a href="javascript:;">Подробнее о программе <i class="fa fa-angle-right fa"></i></a>
+        <!--<a href="javascript:;">Подробнее о программе <i class="fa fa-angle-right fa"></i></a>-->
       </div>
     </div>
   </div>
