--- a/itgm10/index.html
+++ b/itgm10/index.html
@@ -133,6 +133,7 @@ location:
     <div class="row">
       <div class="col-md-9 col-sm-11 col-xs-12">
         <h1>В одно время.<br>В одном месте.</h1>
+        <a href="javascript:openProgram();">Подробнее о программе <i class="fa fa-angle-right fa"></i></a>
       </div>
     </div>
   </div>
@@ -141,21 +142,18 @@ location:
   <div class="container">
     <!-- Строка 1 -->
 
-    {% for community in site.data.itgm10_communities %} {% assign loopindex = forloop.index | modulo: 4 %} {% if loopindex ==
-    1 or forloop.first %}
-    <div class="row text-center">
-      {% endif %}
-      <div class="col-sm-3">
-        <a class="a-thumbnail" href="{{ community.link }}" target="_blank">
+    <div class="row text-center thumbnail-row">
+    {% for community in site.data.itgm10_communities %}
+      <div class="col-sm-3 thumbnail-row_elm">
+        <a class="thumbnail-btn a-thumbnail" href="{{ community.link }}" target="_blank">
           <div class="thumbnail">
             <h3>{{ community.title }}</h3>
             <!-- <p>Краткое описание в три <br>строки</p> -->
           </div>
         </a>
       </div>
-      {% if loopindex == 0 or forloop.last %}
+    {% endfor %}
     </div>
-    {% endif %} {% endfor %}
 
     <div class="btn-center">
       <a href="mailto:piterunited@gmail.com" class="btn btn-primary btn-lg btn-block">Стать участником</a>
@@ -224,7 +222,7 @@ location:
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <!--<a href="javascript:;">Подробнее о программе <i class="fa fa-angle-right fa"></i></a>-->
+        <a href="javascript:openProgram();">Подробнее о программе <i class="fa fa-angle-right fa"></i></a>
       </div>
     </div>
   </div>
