ITGM 11 (add sponsors, add organizer photos, fix styles)

--- a/itgm11/index.html
+++ b/itgm11/index.html
@@ -384,11 +384,11 @@ location:
         <div class="carousel slide" data-ride="carousel" id="quote-carousel">
           <!-- Photos -->
           <ol class="carousel-indicators">
-            <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="../img/purple/org.png" alt="">
+            <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="/img/leningradez.jpg" alt="Михаил Рыжиков">
             </li>
-            <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="../img/purple/org.png" alt="">
+            <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="/img/anna.jpg" alt="Анна Горбатенко">
             </li>
-            <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="../img/purple/org.png" alt="">
+            <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="/img/mike1pol.jpg" alt="Михаил Полубояринов">
             </li>
           </ol>
           <!-- Carousel Slides -->
