fix partner logos, fix #37

--- a/itgm11/index.html
+++ b/itgm11/index.html
@@ -3,7 +3,7 @@ layout: layout_red
 title: "IT Global Meetup #11"
 page_title: "Осенний слёт IT сообществ Санкт-Петербурга"
 description: 28 октября 2017, с 10.00 до 19.00. 10-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3.
-logo: http://piter-united.ru/img/itgm_logo_blue.png
+logo: http://piter-united.ru/img/red/itgm_logo.png
 url: http://piter-united.ru/itgm11
 date:
     day: 28 октября
